# td-one

./: Cargo.toml  README.md  TODO
src/: input.rs  main.rs  map.rs  offset.rs
src/anim/: mod.rs
src/components/: mod.rs
src/math/: mod.rs
src/qt/: mod.rs
src/systems/: boundary_constraint.rs  input.rs  mod.rs  motion.rs  render.rs  space_partition.rs  targeting.rs
src/systems/render/: anchor.rs  mod.rs  panel.rs  text.rs
src/text/: mod.rs
src/ui/: mod.rs  text.rs
src/world/: actor.rs  ai.rs  map.rs  mod.rs  task.rs  vector.rs
