[package]
name = "td-two"
version = "0.1.0"
authors = ["Michael Cloonan <mcloonan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
specs = "0.14.0"
piston = "0.48.0"
piston2d-graphics = "0.32.0"
piston2d-opengl_graphics = "0.65.0"
pistoncore-sdl2_window = "0.62.0"
piston-viewport = "1.0.0"
rand = "0.6.0"
float-cmp = "0.5.0"
